# Crypto-Anaylzer

./: .editorconfig  .gitignore  .graperootignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  HANDOFF_AUTOPOLLING.md  README.md  SECURITY.md  WINDOWS_24_7.md  analyze_from_sqlite.py  app.py  backtest.py  backtest_walkforward.py  case_study_liqshock_1h.md  clear_db_data.py  config.py  config.yaml  dashboard.py  data.py  dex_analyze.py  dex_data.sqlite  dex_discover.py  dex_poll_to_sqlite.py  dex_scan.py  features.py  materialize_bars.py  pull_request_template.md  pyproject.toml  pytest_full.txt  pytest_out.txt  report_daily.py  requirements.txt  research_report.py  research_report_v2.py  reset_data.ps1  (+3 more)
.cursor/rules/: project-context.mdc  python-and-providers.mdc  tests.mdc
.github/: FUNDING.yml
cli/: analyze.py  api.py  app.py  audit_trace.py  backtest.py  backtest_walkforward.py  case_study_liqshock_renderer.py  dashboard.py  demo.py  materialize.py  null_suite.py  poll.py  promotion.py  report_daily.py  research_report.py  research_report_v2.py  scan.py
crypto_analyzer/: __init__.py  __main__.py  _version.py  alpha_research.py  api.py  artifacts.py  backtest_core.py  config.py  cs_factors.py  cs_model.py  data.py  dataset.py  dataset_v2.py  diagnostics.py  doctor.py  evaluation.py  execution_cost.py  experiment_store.py  experiments.py  factor_materialize.py  factors.py  factors_dynamic_beta.py  features.py  folds.py  governance.py  governance_seeding.py  integrity.py  multiple_testing.py  multiple_testing_adjuster.py  null_suite.py  optimizer.py  order_intent.py  portfolio.py  portfolio_advanced.py  read_api.py  regimes.py  research_universe.py  risk_model.py  rng.py  signals.py  (+9 more)
crypto_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CLEANUP_SUMMARY.md  FOUNDERS_AUDIT.md  INSTITUTIONAL.md  architecture.md  autopolling.md  deployment.md  design.md  developer_environment.md  methods_and_limits.md  phase3_summary.md  research_validation_workflow.md
plots/: multi_asset_corr.csv
scripts/: ensure_ripgrep_on_path.ps1  export_diagrams.ps1  migrate_churn_actions.py  normalize_markdown_math.py  run.ps1  run_dashboard.ps1  setup_diagram_tools.ps1
tests/: run_golden_smoke_stats_stack.py  test_acceptance_audit_trace.py  test_alpha_research.py  test_api_smoke.py  test_app_imports.py  test_architecture_boundaries.py  test_artifact_lineage_append_only.py  test_artifact_lineage_written.py  test_audit_invariants_fail_closed.py  test_backend_equivalence_small_case.py  test_backfill_dataset_v2.py  test_bootstrap_correctness.py  test_bundle_contract_schema.py  test_calibration_cscv_smoke.py  test_calibration_fdr_smoke.py  test_calibration_harness_type1.py  test_calibration_rc_smoke.py  test_calibration_rw_smoke.py  test_capacity_slippage.py  test_ci_smoke.py  test_coinbase_advanced_rest.py  test_config_db_path_resolution.py  test_console_entrypoints.py  test_context_plumbing_smoke.py  test_cs_factors.py  test_cs_model.py  test_data_loaders.py  test_dataset_fingerprint.py  test_dataset_hash_universe_scope.py  test_dataset_v2.py  test_db_connection_lifecycle.py  test_db_provenance.py  test_demo_contract.py  test_demo_lite.py  test_diagnostics_health.py  test_doctor.py  test_duckdb_backend_does_not_change_governance_state.py  test_dynamic_beta_estimator.py  test_execution_cost.py  test_execution_evidence.py  (+103 more)
tools/: README.md  __init__.py  analyze_legacy.py  check_dataset.py  check_db.py  check_experiments.py  check_import_boundaries.py  check_md_links.py  check_universe.py  check_version_changelog.py  clear_db.py  discover.py  graperoot_ignore.py  rebuild_graperoot_graph.py  sanity_check.py  sanity_check_m5.py  sync_ai_skills.py  triage_api.ps1
(+206 files in other folders)
