[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analyzer"
dynamic = ["version"]
description = "Crypto quantitative research platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy>=1.10.0",
    "PyYAML",
    "plotly",
    "streamlit",
    "requests",
    "matplotlib",
    "pyarrow",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
postgres = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
dev = ["pytest>=7.0"]

[project.scripts]
crypto-analyzer = "crypto_analyzer.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "crypto_analyzer.__version__"}

[tool.setuptools.packages.find]
include = ["crypto_analyzer*"]
