[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analyzer"
dynamic = ["version"]
description = "Crypto quantitative research platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy>=1.10.0",
    "PyYAML",
    "requests",
    "websocket-client",
    "matplotlib",
    "pyarrow",
]

[project.optional-dependencies]
ui = ["plotly", "streamlit", "streamlit-autorefresh"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
postgres = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
dev = ["pytest>=7.0", "ruff>=0.6", "pre-commit"]

[project.scripts]
crypto-analyzer = "crypto_analyzer.cli.main:main"

# Allow uv lock to build the project (dynamic version reads crypto_analyzer which imports pandas)
[tool.uv.extra-build-dependencies]
crypto-analyzer = ["pandas", "numpy"]

[tool.setuptools.dynamic]
version = {attr = "crypto_analyzer.__version__"}

[tool.setuptools.packages.find]
include = ["crypto_analyzer*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cli/*.py" = ["E402"]
"crypto_analyzer/cli/*.py" = ["E402"]
"tools/*.py" = ["E402"]
"tests/*.py" = ["E402"]
# Intentional import order for boundary/facade tests
"tests/test_import_compat_shims.py" = ["E402", "I001"]
"tests/test_public_facade_contracts.py" = ["E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests that run the full report pipeline (deselect with -m 'not slow')",
    "network: marks tests that require network access (deselect with -m 'not network')",
    "unit: fast tests, no I/O or external deps",
    "integration: tests that touch DB or multi-module flows",
]
